--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"> <a href="#">About</a> </li>
+                    <li> <a href="#">About</a> </li>
                     <li> <a href="#">Portfolio</a> </li>
                     <li> <a href="#">Interests</a> </li>
                 </ul>
