Added traveled navbar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
                     <li> <a href="#">About</a> </li>
                     <li> <a href="#">Portfolio</a> </li>
                     <li> <a href="#">Interests</a> </li>
+                    <li> <a href="#">Traveled</a> </li>
                 </ul>
             </div>
         </nav>
+        <!-- large front image -->
+        <div class="index-img">
+            <img src="">
+        </div>
     </body>
 </html>
