--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
                     <li class="active"> <a href="#">About</a> </li>
                     <li> <a href="#">Portfolio</a> </li>
                     <li> <a href="#">Interests</a> </li>
+                    <li> <a href="#">Traveled</a> </li>
                 </ul>
             </div>
         </nav>
