--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                     <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li> <a href="#">About</a> </li>
-                    <li> <a href="#">Portfolio</a> </li>
-                    <li> <a href="#">Interests</a> </li>
-                    <li> <a href="#">Traveled</a> </li>
+                    <li> <a href="about.html">About</a> </li>
+                    <li> <a href="portfolio.html">Portfolio</a> </li>
+                    <li> <a href="interests.html">Interests</a> </li>
+                    <li> <a href="traveled.html">Traveled</a> </li>
                 </ul>
             </div>
         </nav>
