--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <!-- navigation bar at the top of the page -->
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
-                </div>
+                </div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li> <a href="about.html">About</a> </li>
                     <li class="active"> <a href="portfolio.html">Portfolio</a> </li>
