Added div for map

--- a/traveled.html
+++ b/traveled.html
@@ -22,5 +22,13 @@
                 </ul>
             </div>
         </nav>
+        <!-- display map -->
+        <div class="container-fluid">
+            <div class="thumbnail">
+                <div id="map">
+                </div>
+            </div>
+
+        </div>
     </body>
 </html>
