--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Me</title>
+        <title>About Myself</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -22,5 +22,15 @@
                 </ul>
             </div>
         </nav>
+        <!-- divide page into two sections for picture and description -->
+        <div class="container">
+            <div class="media">
+                <img src="about_img.jpeg">
+                <div class="media-body">
+                    <h4>Jiwoon Kim</h4>
+                    <p>...</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
