--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
                 </ul>
             </div>
         </nav>
+        <!-- Space for front page content -->
+        <div class="container">
+        </div>
     </body>
 </html>
