--- a/traveled.html
+++ b/traveled.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Me</title>
+        <title>Traveling the World</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -28,7 +28,10 @@
                 <div id="map">
                 </div>
             </div>
-
         </div>
+        <script>
+            let markers = [];
+            var map = google
+        </script>
     </body>
 </html>
