Added class to image

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </nav>
         <!-- divide page into two sections for picture and description -->
         <div class="media">
-            <img src="about_img.jpeg">
+            <img class="mr-3" src="about_img.jpeg">
             <div class="media-body">
                 <h2>Jiwoon Kim</h2>
                 <p>...</p>
