--- a/about.html
+++ b/about.html
@@ -23,11 +23,13 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="media">
-            <img class="mr-3" src="about_img.jpeg">
-            <div class="media-body">
-                <h2>Jiwoon Kim</h2>
-                <p>...</p>
+        <div class="container">
+            <div class="media">
+                <img class="mr-3" src="about_img.jpeg">
+                <div class="media-body">
+                    <h2 class="mt-0">Jiwoon Kim</h2>
+                    ...
+                </div>
             </div>
         </div>
     </body>
