--- a/about.html
+++ b/about.html
@@ -25,10 +25,12 @@
         <!-- divide page into two sections for picture and description -->
         <div class="container">
             <div class="media">
-                <img class="mr-3" src="about_img.jpeg">
+                <div class="media-left">
+                    <img class="media-object" src="about_img.jpeg">
+                </div>
                 <div class="media-body">
-                    <h2 class="mt-0">Jiwoon Kim</h2>
-                    ...
+                    <h2 class="media-heading">Jiwoon Kim</h2>
+                    <p>...</p>
                 </div>
             </div>
         </div>
