--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="media">
                 <div class="media-left">
-                    <img class="media-object" src="about_img.jpeg">
+                    <img class="media-object" src="about_img.jpeg" width="100%">
                 </div>
                 <div class="media-body">
                     <h2 class="media-heading">Jiwoon Kim</h2>
