Changed class selectors

--- a/about.html
+++ b/about.html
@@ -25,11 +25,9 @@
         <!-- divide page into two sections for picture and description -->
         <div class="container">
             <div class="media">
-                <div class="media-left">
-                    <img class="media-object" src="about_img.jpeg" width="100%">
-                </div>
+                <img class="mr-3" src="about_img.jpeg" width="100%">
                 <div class="media-body">
-                    <h2 class="media-heading">Jiwoon Kim</h2>
+                    <h2 class="mt-0">Jiwoon Kim</h2>
                     <p>...</p>
                 </div>
             </div>
