--- a/about.html
+++ b/about.html
@@ -23,14 +23,12 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="container">
-            <div class="media">
-                <img class="mr-3" src="about_img.jpeg" width="100%">
-                <div class="media-body">
-                    <h2 class="mt-0">Jiwoon Kim</h2>
-                    <p>...</p>
-                </div>
-            </div>
+        <div class="media">
+          <img class="mr-3" src="about_img.jpeg" alt="Generic placeholder image">
+          <div class="media-body">
+            <h5 class="mt-0">Media heading</h5>
+            nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
         </div>
     </body>
 </html>
