Recreated structure by using row

--- a/about.html
+++ b/about.html
@@ -23,12 +23,14 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="media">
-          <img class="mr-3" src="about_img.jpeg" alt="Generic placeholder image">
-          <div class="media-body">
-            <h5 class="mt-0">Media heading</h5>
-            nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-          </div>
+        <div class="container">
+            <div class="row">
+                <img src="about_img.jpeg">
+                <div>
+                    <h3>Jiwoon Kim | 김지운</h3>
+                    <p>dkdkdkdkdk</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
