--- a/about.html
+++ b/about.html
@@ -23,10 +23,14 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="container">
+        <div class="container" class="img-rounded">
             <div class="row">
-                <img src="about_img.jpeg">
-                <div>
+                <div class="col-md-5">
+                    <div class="thumbnail">
+                        <img src="about_img.jpeg" style="width:100%">
+                    </div>
+                </div>
+                <div class="col-md-7">
                     <h3>Jiwoon Kim | 김지운</h3>
                     <p>dkdkdkdkdk</p>
                 </div>
