--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-md-7">
                     <h3>Jiwoon Kim | 김지운</h3>
-                    <p>dkdkdkdkdk</p>
+                    <p>다다다</p>
                 </div>
             </div>
         </div>
