Changed container device in about.html

--- a/about.html
+++ b/about.html
@@ -25,14 +25,14 @@
         <!-- divide page into two sections for picture and description -->
         <div class="container" class="img-rounded">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-lg-5">
                     <div class="thumbnail">
                         <img src="about_img.jpeg" style="width:100%">
                     </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-lg-7">
                     <h3>Jiwoon Kim | 김지운</h3>
-                    <p>다다다</p>
+                    <p>다다다다다</p>
                 </div>
             </div>
         </div>
