--- a/about.html
+++ b/about.html
@@ -23,16 +23,14 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="container" class="img-rounded">
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="thumbnail">
-                        <img src="about_img.jpeg" style="width:100%">
-                    </div>
+        <div class="container">
+            <div class="row" justify-content-start>
+                <div class="col-lg-6" class="thumbnail">
+                    <img class="img-rounded" src="about_img.jpeg" style="width:100%">
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-6">
                     <h3>Jiwoon Kim | 김지운</h3>
-                    <p>다다다다다</p>
+                    <p>다다다다다dkdkdk</p>
                 </div>
             </div>
         </div>
