Changed container property

--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
         </nav>
         <!-- divide page into two sections for picture and description -->
         <div class="container">
-            <div class="row" justify-content-start>
-                <div class="col-lg-6" class="thumbnail">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
                     <img class="img-rounded" src="about_img.jpeg" style="width:100%">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-5">
                     <h3>Jiwoon Kim | 김지운</h3>
                     <p>다다다다다dkdkdk</p>
                 </div>
