Changed container to fluid

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
                     <img class="img-rounded" src="about_img.jpeg" style="width:100%">
