--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
-                </div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
+                </div>
+                <ul class="nav navbar-nav" class="collapse navbar-collapse">
                     <li class="active"> <a href="about.html">About</a> </li>
                     <li> <a href="portfolio.html">Portfolio</a> </li>
                     <li> <a href="interests.html">Interests</a> </li>
@@ -24,13 +24,15 @@
         </nav>
         <!-- divide page into two sections for picture and description -->
         <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-lg-5">
+            <div class="row">
+                <div class="col-md-6">
                     <img class="img-rounded" src="about_img.jpeg" style="width:100%">
                 </div>
-                <div class="col-lg-5">
-                    <h3>Jiwoon Kim | 김지운</h3>
-                    <p>다다다다다dkdkdk</p>
+                <div class="col-md-6">
+                    <h1>Jiwoon Kim | 김지운</h1>
+                    <br> <br>
+                    <p id="quote">Born in Seoul, South Korea. Sprouted in San Francisco, California. Bloomed to sprinkle love around the world.</p>
+                    <p>Growing up half in California and half in both South Korea, I </p>
                 </div>
             </div>
         </div>
