--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
-                </div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
+                </div>
+                <ul class="nav navbar-nav" class="collapse navbar-collapse">
                     <li> <a href="about.html">About</a> </li>
                     <li class="active"> <a href="portfolio.html">Portfolio</a> </li>
                     <li> <a href="interests.html">Interests</a> </li>
