Added my google map api key to traveled.html

--- a/traveled.html
+++ b/traveled.html
@@ -66,6 +66,6 @@
                 }
             }
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkLaUeFf7_EzU8OWmBzf3MJme3LeD6SoA&callback=initMap" async defer></script>
     </body>
 </html>
