Eliminated thumbnail tag from traveled.html

--- a/traveled.html
+++ b/traveled.html
@@ -26,10 +26,7 @@
         </nav>
         <!-- display map -->
         <div class="container-fluid">
-            <div class="thumbnail">
-                <div id="map">
-                </div>
-            </div>
+            <div id="map"></div>
         </div>
         <script>
         /*
