--- a/traveled.html
+++ b/traveled.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="traveled">
     <head>
         <title>Traveling the World</title>
         <meta charset="utf-8">
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="mystyle.css">
     </head>
-    <body>
+    <body class="traveled">
         <!-- navigation bar at the top of the page -->
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
