Added css to height of map for traveled

--- a/traveled.html
+++ b/traveled.html
@@ -27,8 +27,11 @@
         <!-- display map and table of log of travels -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6" class="thumbnail">
-                    <div id="map" class="z-depth-1-half map-container" style="height: 400px"></div>
+                <div class="col-md-6">
+                    <div id="map" class="z-depth-1-half map-container"></div>
+                </div>
+                <div class="col-md-6">
+
                 </div>
             </div>
         </div>
