--- a/traveled.html
+++ b/traveled.html
@@ -31,7 +31,94 @@
                     <div id="map" class="z-depth-1-half map-container"></div>
                 </div>
                 <div class="col-md-6">
-
+                    <h1>Travel Log | 여행기록</h1>
+                    <table class="table table-stripped">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Place</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Albany, California</td>
+                                <td>
+                                    <p>1996 - 2002</p>
+                                    <p>2008 - 2009</p>
+                                </td>
+                                <td>Lived for 7 years</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Singapore</td>
+                                <td>July, 2008</td>
+                                <td>School trip (middle school)</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Malaysia</td>
+                                <td>July, 2008</td>
+                                <td>School trip (middle school)</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>Indonesia</td>
+                                <td>July, 2008</td>
+                                <td>School trip (middle school)</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>Egypt</td>
+                                <td>0ctober, 2009</td>
+                                <td>Family trip</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td>Shanghai</td>
+                                <td>November, 2012</td>
+                                <td>School trip (high school)</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">7</th>
+                                <td>Sapporo, Japan</td>
+                                <td>July, 2014</td>
+                                <td>Family Trip</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">8</th>
+                                <td>Tokyo, Japan</td>
+                                <td>January, 2014</td>
+                                <td>Accompanied business trip</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">9</th>
+                                <td>Taiwan</td>
+                                <td>February, 2015</td>
+                                <td>Family trip with relatives</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">10</th>
+                                <td>Hong Kong</td>
+                                <td>August, 2016</td>
+                                <td>Family trip with aunts and cousin</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">11</th>
+                                <td>Macau</td>
+                                <td>August, 2016</td>
+                                <td>Family trip with aunts and cousin</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">12</th>
+                                <td>Seoul</td>
+                                <td>Since 2014</td>
+                                <td>Current residence</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
