--- a/traveled.html
+++ b/traveled.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1>Travel Log | 여행기록</h1>
-                    <table class="table table-stripped">
+                    <table class="table table-striped">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col">#</th>
