Added color to table head in traveled.html

--- a/traveled.html
+++ b/traveled.html
@@ -33,7 +33,7 @@
                 <div class="col-md-6">
                     <h1>Travel Log | 여행기록</h1>
                     <table class="table table-striped">
-                        <thead class="thead-light">
+                        <thead class="table-head">
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Place</th>
