Added break line between table and header

--- a/traveled.html
+++ b/traveled.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav" class="collapse navbar-collapse">
                     <li> <a href="about.html">About</a> </li>
                     <li> <a href="portfolio.html">Portfolio</a> </li>
-                    <li> <a href="interests.html">Interests</a> </li>
+                    <li> <a href="challenges.html">Challenges</a> </li>
                     <li class="active"> <a href="traveled.html">Traveled</a> </li>
                 </ul>
             </div>
@@ -32,6 +32,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1>Travel Log | 여행기록</h1>
+                    <br>
                     <table class="table table-striped">
                         <thead class="table-head">
                             <tr>
