--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav" class="collapse navbar-collapse">
                     <li> <a href="about.html">About</a> </li>
                     <li> <a href="portfolio.html">Portfolio</a> </li>
-                    <li> <a href="interests.html">Interests</a> </li>
+                    <li> <a href="challenges.html">Challenges</a> </li>
                     <li> <a href="traveled.html">Traveled</a> </li>
                 </ul>
             </div>
