--- a/challenges.html
+++ b/challenges.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Interests</title>
+        <title>My Challenges</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,10 +19,14 @@
                 <ul class="nav navbar-nav" class="collapse navbar-collapse">
                     <li> <a href="about.html">About</a> </li>
                     <li> <a href="portfolio.html">Portfolio</a> </li>
-                    <li class="active"> <a href="interests.html">Interests</a> </li>
+                    <li class="active"> <a href="challenges.html">Challenges</a> </li>
                     <li> <a href="traveled.html">Traveled</a> </li>
                 </ul>
             </div>
         </nav>
+        <!-- my challenges -->
+        <div class="container">
+            <h1>I Challenge You!</h1>
+        </div>
     </body>
 </html>
