Added card example to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,5 +24,16 @@
                 </ul>
             </div>
         </nav>
+        <!-- portfolio content using cards -->
+        <div class="container">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Project 1 title</h5>
+                    <p class="card-text">Short explanation of project</p>
+                    <a href="#" class="btn btn-primary">Link to project</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
