--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,28 @@
 
         <!-- portfolio content using cards -->
         <div class="card">
-          <div class="card-body">Basic</div>
+          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Project title</h5>
+            <p class="card-text">Short explanation of project</p>
+            <a href="#" class="btn btn-primary">Go to project</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Project title</h5>
+            <p class="card-text">Short explanation of project</p>
+            <a href="#" class="btn btn-primary">Go to project</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Project title</h5>
+            <p class="card-text">Short explanation of project</p>
+            <a href="#" class="btn btn-primary">Go to project</a>
+          </div>
         </div>
     </body>
 </html>
