Added more cards and customized portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,31 +34,53 @@
               </ul>
             </div>
         </nav>
-
         <!-- portfolio content using cards -->
-        <div class="card">
-          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Project title</h5>
-            <p class="card-text">Short explanation of project</p>
-            <a href="#" class="btn btn-primary">Go to project</a>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Project title</h5>
+                  <p class="card-text">Short explanation of project</p>
+                  <a href="#" class="btn btn-primary">Go to project</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Project title</h5>
+                  <p class="card-text">Short explanation of project</p>
+                  <a href="#" class="btn btn-primary">Go to project</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Project title</h5>
+                  <p class="card-text">Short explanation of project</p>
+                  <a href="#" class="btn btn-primary">Go to project</a>
+                </div>
+              </div>
+            </div>
           </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Project title</h5>
+                  <p class="card-text">Short explanation of project</p>
+                  <a href="#" class="btn btn-primary">Go to project</a>
+                </div>
+              </div>
+            </div>
         </div>
-        <div class="card">
-          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Project title</h5>
-            <p class="card-text">Short explanation of project</p>
-            <a href="#" class="btn btn-primary">Go to project</a>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Project title</h5>
-            <p class="card-text">Short explanation of project</p>
-            <a href="#" class="btn btn-primary">Go to project</a>
-          </div>
-        </div>
+
+
     </body>
 </html>
