--- a/traveled.html
+++ b/traveled.html
@@ -43,7 +43,7 @@
                 <div class="col-md-6">
                     <h1>Travel Log | 여행기록</h1>
                     <br>
-                    <table class="table table-striped">
+                    <table class="table">
                         <thead class="table-head">
                             <tr>
                                 <th scope="col">#</th>
