Changed table style in traveled.html

--- a/traveled.html
+++ b/traveled.html
@@ -57,8 +57,8 @@
                                 <th scope="row">1</th>
                                 <td>Albany, California</td>
                                 <td>
-                                    <p>1996 - 2002</p>
-                                    <p>2008 - 2009</p>
+                                    <p class="table-p">1996 - 2002</p>
+                                    <p class="table-p">2008 - 2009</p>
                                 </td>
                                 <td>Lived for 7 years</td>
                             </tr>
