Changed overall container margin for pages

--- a/traveled.html
+++ b/traveled.html
@@ -36,13 +36,12 @@
         </nav>
         <!-- display map and table of log of travels -->
         <div class="container">
-            <h1>Travel Log | 여행기록</h1>
+            <h1 class="page-header">Travel Log | 여행기록</h1>
             <div class="row">
                 <div class="col-md-6">
                     <div id="map" class="z-depth-1-half map-container"></div>
                 </div>
                 <div class="col-md-6">
-                    <br>
                     <table class="table">
                         <thead class="table-head">
                             <tr>
