Changed error in margin for all pages

--- a/challenges.html
+++ b/challenges.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Content for my challenges -->
-        <div class="container">
+        <div class="container-fluid">
             <h1>I Challenge You!</h1>
             <!-- Create carousel of current challenges (slides) -->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
