--- a/traveled.html
+++ b/traveled.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- display map and table of log of travels -->
-        <div class="container">
+        <div class="container-fluid">
             <h1 class="page-header">Travel Log | 여행기록</h1>
             <div class="row">
                 <div class="col-md-6">
