--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="img-rounded" src="about_img.jpeg" id="about_img">
+                    <img class="rounded" src="about_img.jpeg" id="about_img">
                 </div>
                 <div class="col-md-6">
                     <h1>Jiwoon Kim | 김지운</h1>
