--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <!-- navigation bar at the top of the page -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
             <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,10 +35,10 @@
             </div>
         </nav>
         <!-- divide page into two sections for picture and description -->
-        <div class="container-fluid">
+        <div class="container-fluid" id="about-container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="rounded" src="about_img.jpeg" id="about_img">
+                    <img class="rounded" src="about_img.jpeg" id="about-img">
                 </div>
                 <div class="col-md-6">
                     <h1>Jiwoon Kim | 김지운</h1>
