Created separate image file and added cards to challenges

--- a/challenges.html
+++ b/challenges.html
@@ -48,7 +48,7 @@
               <!-- Content for the carousel -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="" alt="First slide">
+                  <img class="d-block w-100" src="images/cs50_image.png" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
                     <h5> </h5>
                     <p>  </p>
@@ -78,6 +78,54 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
+            </div>
+            <!-- row for past challenges  -->
+            <div class="row">
+              <div class="row">
+              <div class="col-md-3">
+                <div class="card">
+                  <img class="card-img-top" src="" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Past Challenge 1</h5>
+                    <p class="card-text">Short explanation of challenge</p>
+                    <a href="#" class="btn btn-primary">Go to challenge</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="card">
+                  <img class="card-img-top" src="" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Past Challenge 2</h5>
+                    <p class="card-text">Short explanation of chellenge</p>
+                    <a href="#" class="btn btn-primary">Go to challenge</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </div>
+            <!-- row for future challenges: displayed by cards-->
+            <div class="row">
+              <div class="col-md-3">
+                <div class="card">
+                  <img class="card-img-top" src="" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Future Challenge 1</h5>
+                    <p class="card-text">Short explanation of challenge</p>
+                    <a href="#" class="btn btn-primary">Go to challenge</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="card">
+                  <img class="card-img-top" src="" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Future Challenge 2</h5>
+                    <p class="card-text">Short explanation of chellenge</p>
+                    <a href="#" class="btn btn-primary">Go to challenge</a>
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
     </body>
