--- a/challenges.html
+++ b/challenges.html
@@ -80,8 +80,8 @@
               </a>
             </div>
             <!-- row for past challenges  -->
+            <h1>Completed Challenges</h1>
             <div class="row">
-              <div class="row">
               <div class="col-md-3">
                 <div class="card">
                   <img class="card-img-top" src="" alt="Card image cap">
@@ -105,6 +105,7 @@
             </div>
             </div>
             <!-- row for future challenges: displayed by cards-->
+            <h1>Future Challenges</h1>
             <div class="row">
               <div class="col-md-3">
                 <div class="card">
