Fixed error in card in challenges.html

--- a/challenges.html
+++ b/challenges.html
@@ -86,23 +86,12 @@
                 <div class="card">
                   <img class="card-img-top" src="" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Past Challenge 1</h5>
+                    <h5 class="card-title">Future Challenge 1</h5>
                     <p class="card-text">Short explanation of challenge</p>
                     <a href="#" class="btn btn-primary">Go to challenge</a>
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
-                <div class="card">
-                  <img class="card-img-top" src="" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Past Challenge 2</h5>
-                    <p class="card-text">Short explanation of chellenge</p>
-                    <a href="#" class="btn btn-primary">Go to challenge</a>
-                  </div>
-                </div>
-              </div>
-            </div>
             </div>
             <!-- row for future challenges: displayed by cards-->
             <h1>Future Challenges</h1>
