--- a/challenges.html
+++ b/challenges.html
@@ -49,7 +49,7 @@
                 <!-- Content for the carousel -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/cs50_image.png" alt="First slide">
+                    <img class="d-block w-100" src="images/cs50_image.PNG" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5> </h5>
                       <p>  </p>
