added style width to image of carousel in challenges.html

--- a/challenges.html
+++ b/challenges.html
@@ -48,10 +48,10 @@
                 </ol>
                 <!-- Content for the carousel -->
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
+                  <div class="carousel-item active" style="width: 100%">
                     <img class="d-block w-100" src="images/cs50_image.PNG" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5> </h5>
+                      <h5>Harvard CS50</h5>
                       <p>  </p>
                     </div>
                   </div>
