--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <!-- navigation bar at the top of the page -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
