--- a/traveled.html
+++ b/traveled.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-md-6">
                     <table class="table">
-                        <thead class="table-head">
+                        <thead class="thead-dark">
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Place</th>
