Changing aesthetics of traveled.html

--- a/traveled.html
+++ b/traveled.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Traveled</title>
+        <title>Traveling the World</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -37,9 +37,9 @@
         </nav>
         <!-- display map and table of log of travels -->
         <div class="container-fluid">
-            <div class="row">
+            <div class="row travel-row">
+                <h1 class="page-head">Travel Log | 여행기록</h1>
                 <div class="col-md-6">
-                    <h1 class="page-header">Travel Log | 여행기록</h1>
                     <div id="map" class="z-depth-1-half map-container"></div>
                 </div>
                 <div class="col-md-6">
