Fixed error in styling page heads

--- a/traveled.html
+++ b/traveled.html
@@ -38,7 +38,7 @@
         <!-- display map and table of log of travels -->
         <div class="container-fluid">
             <div class="row">
-                <h1 class="page-header">Travel Log | 여행기록</h1>
+                <h1 class="page-head">Travel Log | 여행기록</h1>
             </div>
             <div class="row travel-row">
                 <div class="col-md-6">
