--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
         <link rel="stylesheet" href="mystyle.css">
         <link rel="stylesheet" href="mysass.css">
     </head>
@@ -37,6 +38,7 @@
         </nav>
         <!-- portfolio content using cards -->
         <div class="container-fluid">
+          <h1 class="page-head">My Portfolio</h1>
           <div class="row">
             <div class="col-md-4">
               <div class="card">
