--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <img class="rounded" src="images/about_img.jpeg" id="about-img">
                 </div>
                 <div class="col-md-6">
-                    <h1>Jiwoon Kim | 김지운</h1>
+                    <h1 id="name">Jiwoon Kim | 김지운</h1>
                     <br> <br>
                     <p id="quote">Born in Seoul, South Korea. Sprouted in San Francisco, California. Bloomed to sprinkle love around the world.</p>
                     <p>Growing up half in California and half in both South Korea, I </p>
