Added text to about.html and tweaked margin for heads for all pages

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     <h1 id="name">Jiwoon Kim | 김지운</h1>
                     <br> <br>
                     <p id="quote">Born in Seoul, South Korea. Sprouted in San Francisco, California. Bloomed to sprinkle love around the world.</p>
-                    <p>Growing up half in California and half in both South Korea, I </p>
+                    <p>Currently, learning computer science and programming, I wish to create technology which eliminates discriminative barriers and ultimately, help make a better world. I am interested in front and back-end web development, game development, operating systems, and android development. My current goals are to become a full-stack web developer, study advanced algorithms, create a blogspace for teaching computer science and programming and sharing stories of women in tech, and creating software and tools to empower minorities including women, children, queer, and more.</p>
                 </div>
             </div>
         </div>
