--- a/traveled.html
+++ b/traveled.html
@@ -38,7 +38,7 @@
         </nav>
         <!-- display map and table of log of travels -->
         <div class="container-fluid">
-            <h1 class="page-head">Travel Log | 여행기록</h1>
+            <h1 class="page-head">Travel Log</h1>
             <div class="row travel-row">
                 <div class="col-md-6">
                     <div id="map" class="z-depth-1-half map-container"></div>
