Changing font style for about.html

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Dosis|Nanum+Brush+Script" rel="stylesheet">
         <link rel="stylesheet" href="mystyle.css">
         <link rel="stylesheet" href="mysass.css">
     </head>
@@ -46,7 +47,10 @@
                     <h1 id="name">Jiwoon Kim | 김지운</h1>
                     <br> <br>
                     <p id="quote">Born in Seoul, South Korea. Sprouted in San Francisco, California. Bloomed to sprinkle love around the world.</p>
-                    <p>Currently, learning computer science and programming, I wish to create technology which eliminates discriminative barriers and ultimately, help make a better world. I am interested in front and back-end web development, game development, operating systems, and android development. My current goals are to become a full-stack web developer, study advanced algorithms, create a blogspace for teaching computer science and programming and sharing stories of women in tech, and creating software and tools to empower minorities including women, children, queer, and more.</p>
+                    <p id="intro">Currently, learning computer science and programming, I wish to create technology which eliminates discriminative barriers and ultimately, help make a better world.
+                        <br>I am interested in front and back-end web development, game development, operating systems, and android development.
+                        <br>My current goals are to become a full-stack web developer, study advanced algorithms, create a blogspace for teaching computer science and programming and sharing stories of women in tech, and creating software and tools to empower minorities including women, children, queer, and more.
+                    </p>
                 </div>
             </div>
         </div>
