--- a/challenges.html
+++ b/challenges.html
@@ -40,46 +40,48 @@
         <div class="container-fluid">
             <h1 class="page-head">I Challenge You!</h1>
             <!-- Create carousel of current challenges (slides) -->
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <!-- Create indicators for the slides of the carousel -->
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <!-- Content for the carousel -->
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/cs50_image.PNG" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Harvard CS50</h5>
-                    <p>  </p>
+            <div class="row ">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <!-- Create indicators for the slides of the carousel -->
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <!-- Content for the carousel -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/cs50_image.PNG" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Harvard CS50</h5>
+                      <p>  </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5> </h5>
+                      <p>  </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5> </h5>
+                      <p>  </p>
+                    </div>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="" alt="Second slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5> </h5>
-                    <p>  </p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="" alt="Third slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5> </h5>
-                    <p>  </p>
-                  </div>
-                </div>
+                <!-- Add control to carousel -->
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
               </div>
-              <!-- Add control to carousel -->
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
             </div>
             <!-- row for past challenges  -->
             <h1>Completed Challenges</h1>
