Added content to README

--- a/challenges.html
+++ b/challenges.html
@@ -38,7 +38,7 @@
         </nav>
         <!-- Content for my challenges -->
         <div class="container-fluid">
-            <h1 class="page-head">I Challenge You!</h1>
+            <h1 class="page-head">Challenging Myself</h1>
             <!-- Create carousel of current challenges (slides) -->
             <div class="row ">
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
