Fixed error in images and added aesthetics to cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,6 @@
                 <div class="card-body">
                   <h5 class="card-title">Project title</h5>
                   <p class="card-text">Short explanation of project</p>
-                  <a href="#" class="btn btn-primary">Go to project</a>
                 </div>
               </div>
             </div>
@@ -56,17 +55,15 @@
                 <div class="card-body">
                   <h5 class="card-title">Project title</h5>
                   <p class="card-text">Short explanation of project</p>
-                  <a href="#" class="btn btn-primary">Go to project</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 portfolio-card">
               <div class="card">
-                <img class="card-img-top" src="sorok-processing.JPG" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="images/sorok_processing.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Project title</h5>
-                  <p class="card-text">Short explanation of project</p>
-                  <a href="#" class="btn btn-primary">Go to project</a>
+                  <h5 class="card-title">Coding Project in Processsing</h5>
+                  <p class="card-text">Digital Media Technology Class 2015</p>
                 </div>
               </div>
             </div>
@@ -74,11 +71,10 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card portfolio-card">
-                <img class="card-img-top" src="sorok_leaflet.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/sorok_leaflet.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Project title</h5>
-                  <p class="card-text">Short explanation of project</p>
-                  <a href="#" class="btn btn-primary">Go to project</a>
+                  <h5 class="card-title">Illustrator Design Project</h5>
+                  <p class="card-text">Digital Media Design Class 2015</p>
                 </div>
               </div>
             </div>
