Fixed error in img card and added height to slides

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card portfolio-card">
-                <img class="card-img-top" src="images/sorok_leaflet.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="images/sorok_leaflet.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Illustrator Design Project</h5>
                   <p class="card-text">Digital Media Design Class 2015</p>
