Added centering for slides in challenges.html

--- a/challenges.html
+++ b/challenges.html
@@ -40,7 +40,7 @@
         <div class="container-fluid">
             <h1 class="page-head">Challenging Myself</h1>
             <!-- Create carousel of current challenges (slides) -->
-            <div class="row" id="slide-row">
+            <div class="row text-center" id="slide-row">
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <!-- Create indicators for the slides of the carousel -->
                 <ol class="carousel-indicators">
