Compiled scss file

--- a/challenges.html
+++ b/challenges.html
@@ -61,7 +61,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block slide-img" src="images/web.PNG" alt="Second slide">
+                    <img class="d-block slide-img mx-auto" src="images/web.PNG" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Web Development CS50</h5>
                       <p>Just Got Warming Up!</p>
@@ -71,7 +71,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block slide-img" src="images/photoshop.PNG" alt="Third slide">
+                    <img class="d-block slide-img mx-auto" src="images/photoshop.PNG" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Photoshop Composition</h5>
                       <p>Just Got Warming Up!</p>
