changed image file for about.html

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <div class="container-fluid" id="about-container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="rounded" src="images/about_img.jpeg" id="about-img">
+                    <img class="rounded" src="images/about_img.png" id="about-img">
                 </div>
                 <div class="col-md-6">
                     <h1 id="name">Jiwoon Kim | 김지운</h1>
